# agentflow

./: .bandit  .bandit-baseline.json  .dockerignore  .editorconfig  .env.example  .gitignore  AGENT_STATE.md  AUTOPILOT.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.api  Makefile  README.md  SECURITY.md  all-open-questions-closure-plan.md  codecov.yml  docker-compose.cdc.yml  docker-compose.chaos.yml  docker-compose.e2e.yml  docker-compose.flink.yml  docker-compose.iceberg.yml  docker-compose.prod.yml  docker-compose.yml  help.md  mkdocs.yml  next-session-2-agent-plan.md  next-session-6-subagents-plan.md  next-session-autonomous-local-plan.md  next-session-external-gates-operator-evidence-plan.md  next-session-free-local-audit-gates-plan.md  next-session-pmf-outreach-plan.md  pyproject.toml  requirements.txt  res.md  second-opinion-alerts-dispatcher.md  second-opinion-webhook-dispatcher.md  x5-benchmark-decision.md
.devcontainer/: Dockerfile  devcontainer.json
.dora/: deployments.jsonl
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  perf-history.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backup.yml  benchmark-arm.yml  cdc-production-capture.yml  chaos.yml  ci.yml  container-attestation.yml  contract.yml  dora.yml  e2e.yml  flink-smoke.yml  load-test.yml  mutation.yml  pages.yml  perf-regression.yml  performance.yml  publish-npm.yml  publish-pypi.yml  scorecard.yml  security.yml  staging-deploy.yml  terraform-apply.yml
.workflow/state/: project-status.md
codex-tasks/Archive/: task-P4B-commit-series.md  task-P4C-verify.md
config/: alerts.yaml  api_keys.yaml  api_versions.yaml  iceberg.yaml  pii_fields.yaml  security.yaml  serving.yaml  slo.yaml  tenants.yaml  toxiproxy.json  webhooks.yaml  webhooks.yaml.example
config/contracts/: metric.active_sessions.v1.yaml  metric.avg_order_value.v1.yaml  metric.conversion_rate.v1.yaml  metric.error_rate.v1.yaml  metric.order_count.v1.yaml  metric.revenue.v1.yaml  order.v1.yaml  order.v2.yaml
contracts/entities/: order.yaml  product.yaml  session.yaml  user.yaml
deploy/fly/: README.md  fly.toml
deploy/hf-space/: DEPLOY.md  Dockerfile  README.md
docker/kafka-connect/: Dockerfile
docker/mysql-source/: init.sql
docker/postgres-source/: init.sql
docs/: SESSION_HANDOFF.md  STATUS.md  api-reference.md  architecture.md  audit-history.md  benchmark-baseline.json  benchmark.md  benchmark_pool16.md  benchmark_pool16_60s.md  benchmark_pool24_60s.md  clickhouse-cutover-plan.md  clickhouse-migration.md  competitive-analysis.md  components.md  concepts.md  contributing.md  cost-analysis.md  customer-discovery-questions.md  customer-discovery-tracker.md  dataflow.html  deployment.md  disaster-recovery.md  domain.md  engineering-standards.md  flink-operators.md  freshness-benchmark.md  generator-spec.md  glossary.md  helm-deployment.md  index.md  integrations.md  observability.md  openapi.json  ops-surfaces-spec.md  pricing-validation-plan.md  product.md  publication-checklist.md  quality.md  quickstart.md  regression-report.md  (+10 more)
docs/agent-tools/: claude-tools.json  openai-tools.json
docs/api/: index.md
docs/architecture/: index.md
docs/benchmark-baseline-archive/: benchmark-baseline-2026-04-17-local.json
docs/benchmarks/: baseline.json
docs/contracts/: how-to-add-entity.md
docs/decisions/: 0004-v1-publication.md  0005-cdc-ingestion-strategy.md  0006-fix-demo-serving-engine-on-clickhouse.md  0007-deployment-topology-kubernetes.md  0008-adopt-nl-sql-engine.md  0009-control-plane-state-and-scaling-gate.md  001-streaming-first.md  0010-control-plane-externalization-postgres.md  0011-ops-serving-split.md  0012-three-node-demo-topology.md  002-flink-over-spark-streaming.md  003-iceberg-over-delta.md  (+1 more)
docs/dv2-multi-branch/: RECORDING_DAY.md  (+26 more)
examples/: README.md
integrations/: pyproject.toml
integrations/agentflow_integrations/crewai/: __init__.py  tools.py
integrations/agentflow_integrations/langchain/: __init__.py  tool.py  toolkit.py
integrations/agentflow_integrations/llamaindex/: __init__.py  reader.py  tool_spec.py
integrations/agentflow_integrations/mcp/: README.md  __init__.py  __main__.py  server.py
k8s/: kind-config.yaml
notebooks/: 01-agent-demo.ipynb  02-nl-query.ipynb
scripts/: autopilot.ps1  backup.py  bandit_diff.py  benchmark_compare.py  benchmark_freshness.py  benchmark_freshness_e2e.py  benchmark_freshness_realpath.py  benchmark_scale_own_data.py  benchmark_throughput_realpath.py  capture_production_cdc.sh  chaos_report.py  chaos_teardown_guard.py  check_performance.py  check_release_artifacts.py  check_schema_evolution.py  dora_metrics.py  export_openapi.py  generate_contracts.py  init_iceberg.py  install-autopilot-task.ps1  k8s_replica_correctness_verify.sh  k8s_smoke_test.sh  k8s_staging_down.sh  k8s_staging_up.sh  mutation_report.py  plot_perf_history.py  profile_entity.py  quality_report.py  record_perf_history.py  register_cdc_connectors.sh  release.py  restore.py  rotate_key.py  rotate_keys.py  run_benchmark.py  run_flink_local.ps1  run_flink_local.sh  run_nl_sql_eval.py  security_check.py  setup.ps1  (+4 more)
sdk/: CHANGELOG.md  README.md  pyproject.toml
sdk-ts/: CHANGELOG.md  README.md  index.ts  package-lock.json  package.json  tsconfig.json
sdk/agentflow/: __init__.py  _compat.py  async_client.py  circuit_breaker.py  cli.py  client.py  exceptions.py  models.py  retry.py
sdk/agentflow/templates/basic/: .env.example.tmpl  README.md.tmpl  main.py.tmpl  requirements.txt.tmpl
sdk/agentflow/templates/crewai/: README.md.tmpl  main.py.tmpl  requirements.txt.tmpl
sdk/agentflow/templates/langchain/: .env.example.tmpl  README.md.tmpl  main.py.tmpl  requirements.txt.tmpl
sdk/agentflow/templates/vercel-ai/: README.md.tmpl  package.json.tmpl
sdk/agentflow/templates/vercel-ai/app/: page.tsx.tmpl
sdk/agentflow/templates/vercel-ai/app/api/chat/: route.ts.tmpl
site/: index.html  style.css
src/: constants.py  db_concurrency.py  logger.py  tenancy.py  version.py
tests/: client.test.ts  conftest.py  test_examples.py
(+920 files in other folders)
