[project]
name = "agentflow-runtime"
version = "1.1.0"
description = "Real-time data platform serving context to AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "bcrypt>=5,<6",
    "confluent-kafka>=2.5,<3",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "dagster>=1.13.1,<2",
    "duckdb>=1.1,<2",
    "httpx>=0.27,<1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41,<2",
    "opentelemetry-instrumentation-fastapi>=0.62b0,<1",
    "opentelemetry-instrumentation-httpx>=0.62b0,<1",
    "opentelemetry-sdk>=1.41,<2",
    "pandera>=0.20,<1",
    "prometheus-client>=0.21,<1",
    "pyarrow>=17,<19",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "pyyaml>=6,<7",
    "sqlglot>=30,<31",
    "structlog>=24.4,<26",
]

[project.optional-dependencies]
flink = [
    "apache-flink==1.19.1",
]
cloud = [
    "boto3>=1.35,<2",
    "pyiceberg[pyiceberg-core]>=0.7,<1",
]
llm = [
    "anthropic>=0.39,<1",
]
load = [
    "locust>=2.29,<3",
]
integrations = [
    # langchain-core >=1.2.22 closes CVE-2026-26013 (SSRF via image_url) and
    # CVE-2026-34070 (path traversal in legacy load_prompt). Bumping the
    # langchain umbrella forces a transitive resolve of langchain-core that
    # satisfies these floors. langchain-text-splitters >=1.1.2 closes
    # GHSA-fv5p-p927-qmxr (SSRF redirect bypass). See Codex audit p9.
    "langchain>=0.3.30,<2",
    "langchain-core>=1.2.22,<2",
    "langchain-text-splitters>=1.1.2,<2",
    "langsmith>=0.7.31,<1",
    "llama-index-core>=0.12,<1",
]
contract = [
    "schemathesis==4.10.2",
]
dev = [
    "bandit>=1.9,<2",
    "build>=1.2,<2",
    "hatchling>=1.25,<2",
    "hypothesis>=6,<7",
    "jsonschema>=4,<5",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "testcontainers[kafka]>=4.9,<5",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
    "/requirements.txt",
]
exclude = [
    "/config/webhooks.yaml",
    "/config/api_keys.yaml",
    "/config/tenants.yaml",
    "/docker/**/secrets/**",
    "/.github/**",
    "/.tmp*/",
    "/notebooks/**",
    "/audit_*.md",
    "/audit_codex/**",
    "/.env*",
    "/k8s/**",
    "/helm/**",
    "/examples/**",
    "/integrations/**",
    "/sdk/**",
    "/sdk-ts/**",
    "/tests/**",
    "/docs/**",
    "/mutants/**",
    "/.dora/**",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101", "S311", "S608"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S603",
    "S607",
    "S310",
    "S104",
    "S106",
    "N802",
    "N805",
    "E402",
    "B017",
    "PT011",
    "A002",
    "E501",
]
"src/serving/backends/clickhouse_backend.py" = [
    "S310",
    "E501",
]
"src/serving/backends/duckdb_backend.py" = [
    "E501",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring Docker services",
    "requires_docker: marks tests that require local Docker",
]
asyncio_mode = "auto"

[tool.mutmut]
paths_to_mutate = [
    "src/serving/api/auth.py",
    "src/serving/masking.py",
    "src/serving/semantic_layer/query_engine.py",
    "src/processing/outbox.py",
    "src/serving/api/rate_limiter.py",
]
also_copy = [
    "src",
    "config",
    "sdk",
]
tests_dir = [
    "tests/unit",
    "tests/property",
    "tests/integration/test_outbox.py",
]
mutate_only_covered_lines = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.processing.flink_jobs.*"
ignore_errors = true

[tool.agentflow.dependency-profiles.profiles.runtime]
editable-installs = ["."]

[tool.agentflow.dependency-profiles.profiles.dev-tools]
editable-installs = [".[dev]"]

[tool.agentflow.dependency-profiles.profiles.test]
editable-installs = [".[dev,cloud]"]

[tool.agentflow.dependency-profiles.profiles.test-sdk]
editable-installs = [".[dev,cloud]", "./sdk"]

[tool.agentflow.dependency-profiles.profiles.test-integrations]
editable-installs = [".[dev,cloud]", "./sdk", "./integrations[mcp]"]

[tool.agentflow.dependency-profiles.profiles.load]
editable-installs = [".[load,cloud]"]

[tool.agentflow.dependency-profiles.profiles.perf]
editable-installs = [".[dev,load,cloud]"]

[tool.agentflow.dependency-profiles.profiles.contract]
editable-installs = [".[dev,cloud,contract]", "./sdk"]

[tool.agentflow.dependency-profiles.profiles.e2e]
editable-installs = [".[dev]", "./sdk"]

[[tool.agentflow.dependency-profiles.targets]]
name = "backup.backup"
kind = "workflow"
path = ".github/workflows/backup.yml"
job = "backup"
profile = "dev-tools"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.lint"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "lint"
profile = "dev-tools"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.schema-check"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "schema-check"
profile = "dev-tools"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.test-unit"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "test-unit"
profile = "test-integrations"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.test-integration"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "test-integration"
profile = "test-sdk"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.helm-schema-live"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "helm-schema-live"
profile = "dev-tools"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.perf-check"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "perf-check"
profile = "perf"

[[tool.agentflow.dependency-profiles.targets]]
name = "chaos.chaos-smoke"
kind = "workflow"
path = ".github/workflows/chaos.yml"
job = "chaos-smoke"
profile = "test"

[[tool.agentflow.dependency-profiles.targets]]
name = "chaos.chaos-full"
kind = "workflow"
path = ".github/workflows/chaos.yml"
job = "chaos-full"
profile = "test"

[[tool.agentflow.dependency-profiles.targets]]
name = "contract.contract"
kind = "workflow"
path = ".github/workflows/contract.yml"
job = "contract"
profile = "contract"

[[tool.agentflow.dependency-profiles.targets]]
name = "e2e.e2e"
kind = "workflow"
path = ".github/workflows/e2e.yml"
job = "e2e"
profile = "e2e"

[[tool.agentflow.dependency-profiles.targets]]
name = "load-test.load-test"
kind = "workflow"
path = ".github/workflows/load-test.yml"
job = "load-test"
profile = "load"

[[tool.agentflow.dependency-profiles.targets]]
name = "mutation.mutation"
kind = "workflow"
path = ".github/workflows/mutation.yml"
job = "mutation"
profile = "test"

[[tool.agentflow.dependency-profiles.targets]]
name = "performance.performance-regression"
kind = "workflow"
path = ".github/workflows/performance.yml"
job = "performance-regression"
profile = "perf"

[[tool.agentflow.dependency-profiles.targets]]
name = "perf-regression.perf-regression"
kind = "workflow"
path = ".github/workflows/perf-regression.yml"
job = "perf-regression"
profile = "perf"

[[tool.agentflow.dependency-profiles.targets]]
name = "staging-deploy.staging"
kind = "workflow"
path = ".github/workflows/staging-deploy.yml"
job = "staging"
profile = "e2e"
