[project]
name = "agentflow-runtime"
version = "1.4.0"
description = "Real-time data platform serving context to AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "bcrypt>=5,<6",
    "confluent-kafka>=2.5,<3",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "dagster>=1.13.1,<2",
    "duckdb>=1.1,<2",
    "httpx>=0.27,<1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41,<2",
    "opentelemetry-instrumentation-fastapi>=0.62b0,<1",
    "opentelemetry-instrumentation-httpx>=0.62b0,<1",
    "opentelemetry-sdk>=1.41,<2",
    "pandera>=0.20,<1",
    "prometheus-client>=0.21,<1",
    "pyarrow>=17,<25",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "pyyaml>=6,<7",
    "sqlglot>=30,<31",
    "structlog>=24.4,<26",
]

[project.optional-dependencies]
flink = [
    "apache-flink==1.19.1",
]
cloud = [
    "boto3>=1.35,<2",
    "pyiceberg[pyiceberg-core]>=0.7,<1",
]
llm = [
    "anthropic>=0.39,<1",
]
load = [
    "locust>=2.29,<3",
]
integrations = [
    # langchain-core >=1.2.22 closes CVE-2026-26013 (SSRF via image_url) and
    # CVE-2026-34070 (path traversal in legacy load_prompt). Bumping the
    # langchain umbrella forces a transitive resolve of langchain-core that
    # satisfies these floors. langchain-text-splitters >=1.1.2 closes
    # GHSA-fv5p-p927-qmxr (SSRF redirect bypass). See Codex audit p9.
    "langchain>=0.3.30,<2",
    "langchain-core>=1.2.22,<2",
    "langchain-text-splitters>=1.1.2,<2",
    "langsmith>=0.7.31,<1",
    "llama-index-core>=0.12,<1",
]
contract = [
    "schemathesis==4.20.0",
]
dev = [
    "bandit>=1.9,<2",
    "build>=1.2,<2",
    "hatchling>=1.25,<2",
    "hypothesis>=6,<7",
    "jsonschema>=4,<5",
    "pandas>=2.2,<3",
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=5,<8",
    "testcontainers[kafka]>=4.9,<5",
    "ruff>=0.6,<1",
    "mypy>=1.11,<3",
    "types-PyYAML>=6,<7",
    "types-redis>=4.6,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
    "/requirements.txt",
]
exclude = [
    "/config/webhooks.yaml",
    "/config/api_keys.yaml",
    "/config/tenants.yaml",
    "/docker/**/secrets/**",
    "/.github/**",
    "/.tmp*/",
    "/notebooks/**",
    "/audit_*.md",
    "/audit_codex/**",
    "/.env*",
    "/k8s/**",
    "/helm/**",
    "/examples/**",
    "/integrations/**",
    "/sdk/**",
    "/sdk-ts/**",
    "/tests/**",
    "/docs/**",
    "/mutants/**",
    "/.dora/**",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S603",
    "S607",
    "S608",
    "S310",
    "S104",
    "S106",
    "N802",
    "N805",
    "E402",
    "B017",
    "PT011",
    "A002",
    "E501",
]
"src/orchestration/dags/daily_batch.py" = [
    "S608",
]
"src/serving/api/routers/lineage.py" = [
    "S608",
]
"src/serving/api/routers/slo.py" = [
    "S608",
]
"src/serving/api/routers/stream.py" = [
    "S608",
]
"src/serving/backends/clickhouse_backend.py" = [
    "S310",
    "S608",
    "E501",
]
"src/serving/backends/duckdb_backend.py" = [
    "S608",
    "E501",
]
"src/serving/semantic_layer/nl_engine.py" = [
    "S608",
]
"src/serving/semantic_layer/query/entity_queries.py" = [
    "S608",
]
"src/serving/semantic_layer/query/nl_queries.py" = [
    "S608",
]
"src/serving/semantic_layer/search_index.py" = [
    "S608",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:schemathesis", "--basetemp=.tmp/pytest-basetemp"]
cache_dir = ".tmp/pytest-cache"
markers = [
    "integration: marks tests requiring Docker services",
    "requires_docker: marks tests that require local Docker",
]
asyncio_mode = "auto"

[tool.mutmut]
paths_to_mutate = [
    "src/serving/api/auth.py",
    "src/serving/masking.py",
    "src/serving/semantic_layer/query_engine.py",
    "src/processing/outbox.py",
    "src/serving/api/rate_limiter.py",
]
also_copy = [
    "src",
    "config",
    "sdk",
]
tests_dir = [
    "tests/unit",
    "tests/property",
    "tests/integration/test_outbox.py",
]
mutate_only_covered_lines = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.processing.flink_jobs.*"
# PyFlink lacks PEP-561 stubs; suppress the no-Any/import-untyped noise from
# pyflink.* while still catching real type bugs (attr-defined, arg-type, etc.).
disable_error_code = ["import-untyped", "no-any-return", "no-untyped-call"]

[[tool.mypy.overrides]]
module = "src.quality.validators.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Event schemas are the data-contract boundary used by producers, validators,
# and API-facing models; keep Pydantic validators fully annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.ingestion.schemas.events"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Synthetic producer drives the local/demo Kafka event stream and is covered by
# a scoped CI coverage gate; keep serialization and delivery callbacks
# annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.ingestion.producers.event_producer"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Security-critical: keep the API key / rate-limit / audit paths fully
# annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.serving.api.auth.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Rate limiting protects the auth/API hot path and emits client-visible
# headers; keep the Redis/memory boundary fully annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.serving.api.rate_limiter"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Security helpers enforce request-size limits and response headers; keep the
# middleware factory boundary fully annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.serving.api.security"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Versioning helpers set compatibility headers and response transforms; keep
# the middleware factory boundary fully annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.serving.api.versioning"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Analytics middleware records request telemetry and replays request bodies;
# keep the middleware factory boundary fully annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.serving.api.analytics"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# QueryCache is the Redis/fallback boundary for cached entity and metric
# lookups; keep the client injection and invalidation helpers annotated. Gated
# by tests/unit/test_typing_policy.py.
module = "src.serving.cache"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Quality monitors gate freshness / SLA / pipeline-health signals; keep them
# fully annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.quality.monitors.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Semantic layer (catalog / NL→SQL / contracts) is the agent-facing query
# surface; keep it fully annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.serving.semantic_layer.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Query backends build/execute SQL (the H-C1/H-C2 injection-hardening
# surface); keep them fully annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.serving.backends.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Batch DAGs drive Iceberg maintenance + aggregate materialization; keep the
# scheduled asset functions fully annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.orchestration.dags.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Dead-letter event replay is a delivery-correctness path (re-emits failed
# events through the transactional outbox); keep it fully annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.processing.event_replayer"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Local end-to-end pipeline (generate→validate→enrich→DuckDB) is the
# zero-infra demo path; keep it fully annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.processing.local_pipeline"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Transactional outbox is an at-least-once delivery-guarantee path; keep it
# fully annotated. The DuckDB connection is reached through the `_connection`
# property so use-after-close fails loud instead of on a None attribute. Gated
# by tests/unit/test_typing_policy.py.
module = "src.processing.outbox"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Request middleware (correlation logging + HTTP metrics + tracing) is the
# per-request observability path; keep it fully annotated. First bounded slice
# into src/serving/api. Gated by tests/unit/test_typing_policy.py.
module = "src.serving.api.middleware.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Dead-letter router (list / detail / stats / replay / dismiss) drives the
# operator-facing recovery surface over the same dead_letter_events table that
# the strict-typed event_replayer / outbox slices manage; keep it fully
# annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.serving.api.routers.deadletter"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Webhooks expose tenant-scoped callback registration and delivery logs; keep
# this operator integration surface fully annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.serving.api.routers.webhooks"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Alerts expose tenant-scoped rule management, test dispatch, and history; keep
# this operator integration surface fully annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.serving.api.routers.alerts"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Contract routes expose schema governance (version lookup, diff, and
# validation); keep them fully annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.serving.api.routers.contracts"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Agent query routes are the LLM-facing query execution, entity lookup, metric,
# and catalog discovery surface; keep them fully annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.serving.api.routers.agent_query"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Batch route fans out entity, metric, and query requests concurrently; keep
# the wrapper fully annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.serving.api.routers.batch"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Search is the semantic discovery API over catalog/search-index results; keep
# its response model boundary annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.serving.api.routers.search"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Lineage reconstructs tenant-scoped provenance chains; keep its response model
# boundary annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.serving.api.routers.lineage"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# SLO routes aggregate tenant-scoped operational health budgets; keep route and
# config boundaries annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.serving.api.routers.slo"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Stream routes emit tenant-scoped SSE payloads; keep fetch and generator
# boundaries annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.serving.api.routers.stream"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Admin UI routes render operator-only status pages; keep route and context
# builders annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.serving.api.routers.admin_ui"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Admin key-management and analytics endpoints expose operator-only control
# plane data; keep route boundaries annotated. Gated by
# tests/unit/test_typing_policy.py.
module = "src.serving.api.routers.admin"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Webhook dispatcher signs and retries tenant-scoped deliveries; keep its
# FastAPI app boundary annotated. Gated by tests/unit/test_typing_policy.py.
module = "src.serving.api.webhook_dispatcher"
disallow_untyped_defs = true

[tool.agentflow.dependency-profiles.profiles.runtime]
editable-installs = ["."]

[tool.agentflow.dependency-profiles.profiles.dev-tools]
editable-installs = [".[dev]"]

[tool.agentflow.dependency-profiles.profiles.test]
editable-installs = [".[dev,cloud]"]

[tool.agentflow.dependency-profiles.profiles.test-sdk]
editable-installs = [".[dev,cloud]", "./sdk"]

[tool.agentflow.dependency-profiles.profiles.test-integrations]
editable-installs = [".[dev,cloud]", "./sdk", "./integrations[mcp]"]

[tool.agentflow.dependency-profiles.profiles.load]
editable-installs = [".[load,cloud]"]

[tool.agentflow.dependency-profiles.profiles.perf]
editable-installs = [".[dev,load,cloud]"]

[tool.agentflow.dependency-profiles.profiles.contract]
editable-installs = [".[dev,cloud,contract]", "./sdk"]

[tool.agentflow.dependency-profiles.profiles.e2e]
editable-installs = [".[dev]", "./sdk"]

[[tool.agentflow.dependency-profiles.targets]]
name = "backup.backup"
kind = "workflow"
path = ".github/workflows/backup.yml"
job = "backup"
profile = "dev-tools"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.lint"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "lint"
profile = "dev-tools"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.schema-check"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "schema-check"
profile = "dev-tools"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.test-unit"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "test-unit"
profile = "test-integrations"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.test-integration"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "test-integration"
profile = "test-sdk"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.helm-schema-live"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "helm-schema-live"
profile = "dev-tools"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.perf-check"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "perf-check"
profile = "perf"

[[tool.agentflow.dependency-profiles.targets]]
name = "chaos.chaos-smoke"
kind = "workflow"
path = ".github/workflows/chaos.yml"
job = "chaos-smoke"
profile = "test"

[[tool.agentflow.dependency-profiles.targets]]
name = "chaos.chaos-full"
kind = "workflow"
path = ".github/workflows/chaos.yml"
job = "chaos-full"
profile = "test"

[[tool.agentflow.dependency-profiles.targets]]
name = "contract.contract"
kind = "workflow"
path = ".github/workflows/contract.yml"
job = "contract"
profile = "contract"

[[tool.agentflow.dependency-profiles.targets]]
name = "e2e.e2e"
kind = "workflow"
path = ".github/workflows/e2e.yml"
job = "e2e"
profile = "e2e"

[[tool.agentflow.dependency-profiles.targets]]
name = "load-test.load-test"
kind = "workflow"
path = ".github/workflows/load-test.yml"
job = "load-test"
profile = "load"

[[tool.agentflow.dependency-profiles.targets]]
name = "mutation.mutation"
kind = "workflow"
path = ".github/workflows/mutation.yml"
job = "mutation"
profile = "test"

[[tool.agentflow.dependency-profiles.targets]]
name = "performance.perf-baseline"
kind = "workflow"
path = ".github/workflows/performance.yml"
job = "perf-baseline"
profile = "perf"

[[tool.agentflow.dependency-profiles.targets]]
name = "perf-regression.perf-smoke"
kind = "workflow"
path = ".github/workflows/perf-regression.yml"
job = "perf-smoke"
profile = "perf"

[[tool.agentflow.dependency-profiles.targets]]
name = "staging-deploy.staging"
kind = "workflow"
path = ".github/workflows/staging-deploy.yml"
job = "staging"
profile = "e2e"
