[project]
name = "agentflow-runtime"
version = "1.6.0"
description = "Real-time data platform serving context to AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "argon2-cffi>=23,<26",
    "bcrypt>=5,<6",
    "confluent-kafka>=2.5,<3",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "dagster>=1.13.1,<2",
    "duckdb>=1.1,<2",
    "httpx>=0.27,<1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41,<2",
    "opentelemetry-instrumentation-fastapi>=0.62b0,<1",
    "opentelemetry-instrumentation-httpx>=0.62b0,<1",
    "opentelemetry-sdk>=1.41,<2",
    "pandera>=0.20,<1",
    "prometheus-client>=0.21,<1",
    "pyarrow>=17,<25",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "pyyaml>=6,<7",
    "sqlglot>=30,<31",
    "structlog>=24.4,<27",
]

[project.optional-dependencies]
flink = [
    "apache-flink==2.3.0",
]
cloud = [
    "boto3>=1.35,<2",
    "pyiceberg[pyiceberg-core]>=0.7,<1",
]
load = [
    "locust>=2.29,<3",
    # benchmark_freshness.py: production QueryCache semantics (TTL + key
    # invalidation) without a Redis server on the benchmark host.
    "fakeredis>=2.21,<3",
]
integrations = [
    # langchain-core >=1.2.22 closes CVE-2026-26013 (SSRF via image_url) and
    # CVE-2026-34070 (path traversal in legacy load_prompt). Bumping the
    # langchain umbrella forces a transitive resolve of langchain-core that
    # satisfies these floors. langchain-text-splitters >=1.1.2 closes
    # GHSA-fv5p-p927-qmxr (SSRF redirect bypass). See audit p9.
    "langchain>=0.3.30,<2",
    "langchain-core>=1.2.22,<2",
    "langchain-text-splitters>=1.1.2,<2",
    # langgraph powers the vendored NL->SQL generation pipeline
    # (src/serving/semantic_layer/nl_sql_engine, ADR 0008). It is an *optional*
    # dependency, not core: the shipped demo default is the rule-based
    # translator (GRACEKELLY_URL unset), and nl_engine lazy-imports the engine
    # only on the opt-in LLM path — so a core install needs no langgraph.
    "langgraph>=1,<2",
    "langsmith>=0.7.31,<1",
    "llama-index-core>=0.12,<1",
]
contract = [
    "schemathesis==4.21.10",
]
dev = [
    "bandit>=1.9,<2",
    "build>=1.2,<2",
    "hatchling>=1.25,<2",
    "hypothesis>=6,<7",
    "jsonschema>=4,<5",
    "pandas>=2.2,<4",
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=5,<8",
    "testcontainers[kafka]>=4.9,<5",
    "ruff>=0.6,<1",
    "mypy>=1.11,<3",
    "types-PyYAML>=6,<7",
    "types-redis>=4.6,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
    "/requirements.txt",
]
exclude = [
    "/config/webhooks.yaml",
    "/config/api_keys.yaml",
    "/config/tenants.yaml",
    "/docker/**/secrets/**",
    "/.github/**",
    "/.tmp*/",
    "/notebooks/**",
    "/audit_*.md",
    "/audit_codex/**",
    "/.env*",
    "/k8s/**",
    "/helm/**",
    "/examples/**",
    "/integrations/**",
    "/sdk/**",
    "/sdk-ts/**",
    "/tests/**",
    "/docs/**",
    "/mutants/**",
    "/.dora/**",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101", "S311"]

[tool.ruff.lint.per-file-ignores]
# Operational tooling: sys.path bootstrap before imports (E402) and
# fixed-argv subprocess calls to git/npm/mutmut (S603/S607) are the
# intentional script idiom, same as the tests/** allowance below.
"scripts/**/*.py" = [
    "E402",
    "S603",
    "S607",
]
"tests/**/*.py" = [
    "S603",
    "S607",
    "S608",
    "S310",
    "S104",
    "S106",
    "N802",
    "N805",
    "E402",
    "B017",
    "PT011",
    "A002",
    "E501",
]
"src/orchestration/dags/daily_batch.py" = [
    "S608",
]
"src/serving/api/routers/lineage.py" = [
    "S608",
]
"src/serving/api/routers/slo.py" = [
    "S608",
]
"src/serving/api/routers/stream.py" = [
    "S608",
]
"src/serving/backends/clickhouse_backend.py" = [
    "S310",
    "S608",
    "E501",
]
"src/serving/backends/duckdb_backend.py" = [
    "S608",
    "E501",
]
# Serving-store mirror for the local pipeline: table/column identifiers are
# module constants, values are single-quote-escaped literals that the backend's
# sqlglot round-trip re-escapes structurally (see ClickHouseBackend docstring).
"src/processing/clickhouse_sink.py" = [
    "S608",
]
# fetch_pipeline_events: selected columns come from the backend schema probe
# (fixed allowlist), values are `?`-bound on DuckDB and _quote_literal-escaped
# on external backends — same convention as entity_queries.py.
"src/serving/semantic_layer/query/engine.py" = [
    "S608",
]
"src/serving/semantic_layer/nl_engine.py" = [
    "S608",
]
"src/serving/semantic_layer/query/entity_queries.py" = [
    "S608",
]
"src/serving/semantic_layer/query/nl_queries.py" = [
    "S608",
]
"src/serving/semantic_layer/search_index.py" = [
    "S608",
]
# Raw-vault INSERT builder: table/column names are internal constants (vault
# table names + pydantic model fields / the curated VAULT_DB_COLUMNS map), and
# every value is parameter-bound (%s). Safe-by-construction interpolation of
# identifiers, which placeholders cannot carry.
"warehouse/agentflow/dv2/loaders/pg_vault_writer.py" = [
    "S608",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:schemathesis", "--basetemp=.tmp/pytest-basetemp"]
cache_dir = ".tmp/pytest-cache"
markers = [
    "integration: marks tests requiring Docker services",
    "requires_docker: marks tests that require local Docker",
]
asyncio_mode = "auto"

[tool.mutmut]
# This list is the *declared* mutation-target policy, enforced by
# tests/unit/test_mutmut_policy.py (paths exist, define real logic, cover the
# security-critical surfaces). It is a superset of what the CI gate actually
# mutates: scripts/mutation_report.py drives the gate from its own
# MODULE_TARGETS, which now mutates sdk/agentflow/retry.py,
# src/serving/semantic_layer/sql_guard.py,
# src/serving/api/rate_limiter.py, src/serving/semantic_layer/query/sql_builder.py,
# src/serving/semantic_layer/query/nl_queries.py, src/serving/api/auth/manager.py
# AND src/serving/api/auth/key_rotation.py live -- every declared serving surface
# is now mutated. The serving modules are mutated as a top-level `serving` package
# against duckdb-free narrow tests: mutmut's trampoline rejects a module name
# starting with `src.`, which (not duckdb) was the real blocker. (The gate runner
# also strips the repo's relative pytest --basetemp inside the mutmut workspace --
# under py3.11 it breaks coverage->mutant mapping for file-I/O targets like
# key_rotation; see scripts/mutation_report.py.) manager.py runs at an honest 0.80
# threshold (not 0.90): it is a
# large stateful auth class whose residual survivors are equivalent mutants
# (structured-logging args, model_copy updates equal to their defaults, redis-url
# strings masked by the `_redis = None` override, the env-only-dead write path) --
# every behaviour-reachable mutant, including every auth-bypass and throttle
# off-by-one, is killed. See scripts/mutation_report.py.
paths_to_mutate = [
    "src/serving/api/auth/manager.py",
    "src/serving/api/auth/key_rotation.py",
    "src/serving/semantic_layer/query/engine.py",
    "src/serving/semantic_layer/query/entity_queries.py",
    "src/serving/semantic_layer/query/metric_queries.py",
    "src/serving/semantic_layer/query/nl_queries.py",
    "src/serving/semantic_layer/query/sql_builder.py",
    "src/serving/semantic_layer/sql_guard.py",
    "src/processing/outbox.py",
    "src/serving/api/rate_limiter.py",
]
also_copy = [
    "src",
    "config",
    "sdk",
]
tests_dir = [
    "tests/unit",
    "tests/property",
    "tests/integration/test_outbox.py",
]
mutate_only_covered_lines = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
# Strict-by-default: every function under src/ must carry full type
# annotations, with ZERO per-module relaxations (the last one, the formerly
# PyFlink-stub-gated flink_jobs package, was hand-annotated 2026-06-05). A
# new untyped def anywhere in src/ now fails mypy. The strict invariant is
# gated by tests/unit/test_typing_policy.py.
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.agentflow.dependency-profiles.profiles.runtime]
editable-installs = ["."]

[tool.agentflow.dependency-profiles.profiles.dev-tools]
editable-installs = [".[dev]"]

[tool.agentflow.dependency-profiles.profiles.test]
editable-installs = [".[dev,cloud]"]

[tool.agentflow.dependency-profiles.profiles.test-sdk]
editable-installs = [".[dev,cloud]", "./sdk"]

[tool.agentflow.dependency-profiles.profiles.test-integrations]
editable-installs = [".[dev,cloud]", "./sdk", "./integrations[mcp]"]

[tool.agentflow.dependency-profiles.profiles.load]
editable-installs = [".[load,cloud]"]

[tool.agentflow.dependency-profiles.profiles.perf]
editable-installs = [".[dev,load,cloud]"]

[tool.agentflow.dependency-profiles.profiles.contract]
editable-installs = [".[dev,cloud,contract]", "./sdk"]

[tool.agentflow.dependency-profiles.profiles.e2e]
editable-installs = [".[dev]", "./sdk"]

[[tool.agentflow.dependency-profiles.targets]]
name = "backup.backup"
kind = "workflow"
path = ".github/workflows/backup.yml"
job = "backup"
profile = "dev-tools"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.lint"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "lint"
profile = "dev-tools"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.schema-check"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "schema-check"
profile = "dev-tools"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.test-unit"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "test-unit"
profile = "test-integrations"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.test-integration"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "test-integration"
profile = "test-sdk"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.helm-schema-live"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "helm-schema-live"
profile = "dev-tools"

[[tool.agentflow.dependency-profiles.targets]]
name = "ci.perf-check"
kind = "workflow"
path = ".github/workflows/ci.yml"
job = "perf-check"
profile = "perf"

[[tool.agentflow.dependency-profiles.targets]]
name = "benchmark-arm.benchmark-arm"
kind = "workflow"
path = ".github/workflows/benchmark-arm.yml"
job = "benchmark-arm"
profile = "perf"

[[tool.agentflow.dependency-profiles.targets]]
name = "chaos.chaos-smoke"
kind = "workflow"
path = ".github/workflows/chaos.yml"
job = "chaos-smoke"
profile = "test"

[[tool.agentflow.dependency-profiles.targets]]
name = "chaos.chaos-full"
kind = "workflow"
path = ".github/workflows/chaos.yml"
job = "chaos-full"
profile = "test"

[[tool.agentflow.dependency-profiles.targets]]
name = "contract.contract"
kind = "workflow"
path = ".github/workflows/contract.yml"
job = "contract"
profile = "contract"

[[tool.agentflow.dependency-profiles.targets]]
name = "e2e.e2e"
kind = "workflow"
path = ".github/workflows/e2e.yml"
job = "e2e"
profile = "e2e"

[[tool.agentflow.dependency-profiles.targets]]
name = "load-test.load-test"
kind = "workflow"
path = ".github/workflows/load-test.yml"
job = "load-test"
profile = "load"

[[tool.agentflow.dependency-profiles.targets]]
name = "mutation.mutation"
kind = "workflow"
path = ".github/workflows/mutation.yml"
job = "mutation"
profile = "test"

[[tool.agentflow.dependency-profiles.targets]]
name = "performance.perf-baseline"
kind = "workflow"
path = ".github/workflows/performance.yml"
job = "perf-baseline"
profile = "perf"

[[tool.agentflow.dependency-profiles.targets]]
name = "perf-regression.perf-smoke"
kind = "workflow"
path = ".github/workflows/perf-regression.yml"
job = "perf-smoke"
profile = "perf"

[[tool.agentflow.dependency-profiles.targets]]
name = "staging-deploy.staging"
kind = "workflow"
path = ".github/workflows/staging-deploy.yml"
job = "staging"
profile = "e2e"
