[project]
name = "agentflow-integrations"
version = "0.1.0"
description = "LangChain and LlamaIndex integrations for AgentFlow"
requires-python = ">=3.11"
dependencies = [
    "agentflow-client>=0.1.0",
    "langchain>=0.3,<1",
    "llama-index-core>=0.12,<1",
    "pydantic>=2.9,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentflow_integrations"]
