[project]
name = "agentflow-integrations"
version = "1.0.1"
description = "LangChain, LlamaIndex, CrewAI, and MCP integrations for AgentFlow"
requires-python = ">=3.11"
dependencies = [
    "agentflow-client>=1.0.1",
    # See agentflow-runtime pyproject.toml for vulnerability rationale on
    # langchain-core / langchain-text-splitters / langsmith floors.
    "langchain>=1.2.24,<2",
    "langchain-core>=1.2.22,<2",
    "langchain-text-splitters>=1.1.2,<2",
    "langsmith>=0.7.31,<1",
    "llama-index-core>=0.12,<1",
    "pydantic>=2.9,<3",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
agentflow-mcp = "agentflow_integrations.mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentflow_integrations"]
