[project]
name = "agentflow"
version = "1.1.0rc1"
description = "Python SDK for the AgentFlow API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["agentflow", "sdk", "api"]
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.27,<1",
    "pydantic>=2.9,<3",
    "rich>=13,<15",
]

[project.scripts]
agentflow = "agentflow.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentflow"]
